[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Piece.gd" type="Script" id=1]

[node name="Piece" type="Node2D"]
position = Vector2( 50, 50 )
script = ExtResource( 1 )

[node name="TranslationTween" type="Tween" parent="."]

[node name="RotationTween" type="Tween" parent="."]

[node name="PulsateTween" type="Tween" parent="."]
